software/pcx86/sys/windows/2.10/README.md
---
layout: page
title: Microsoft Windows/386 2.10
permalink: /software/pcx86/sys/windows/2.10/
redirect_from: /disks/pcx86/windows/2.10/
---

Microsoft Windows 2.10 was actually released as two separate products:

* [Windows/286 2.10](#microsoft-windows286-210)
* [Windows/386 2.10](#microsoft-windows386-210)

Microsoft Windows/286 2.10
---

Windows/286 2.10 was released on May 27, 1988, less than six months after the release of
[Windows 2.0](/disks/pcx86/windows/2.03/).

No disks are available at this time.

In the meantime, take a look at [Windows/286 2.11](/disks/pcx86/windows/2.11/#microsoft-windows286-211).   

Microsoft Windows/386 2.10
---

Reportedly, Windows/386 2.10 was also released on May 27, 1988.  However, as you can see from the directory listings
below, these disks may not have been released until September 1988, if the timestamps are accurate.

Directory listings of the six 720Kb distribution diskettes (which have been copied to six 1.2Mb diskettes)
are provided below.

### Directory of Windows/386 2.10 (SETUP)

	 Volume in drive A is DISK1      

	Directory of A:\

	386LOGO  LGD      2573 09-07-88  12:00a
	CGA40    FON      6544 09-07-88  12:00a
	CGA80    FON      4512 09-07-88  12:00a
	COMM     DRV      4484 09-07-88  12:00a
	EGA40    FON      8576 09-07-88  12:00a
	EGA80    FON      5520 09-07-88  12:00a
	FONTHI   FON      4608 09-07-88  12:00a
	FONTHIUS FON      4528 09-07-88  12:00a
	FONTLO   FON      4160 09-07-88  12:00a
	FONTLOUS FON      4528 09-07-88  12:00a
	FONTSQ   FON      5728 09-07-88  12:00a
	FONTSQCA FON      5552 09-07-88  12:00a
	FONTSQES FON      5552 09-07-88  12:00a
	FONTSQNO FON      5552 09-07-88  12:00a
	FONTSQUS FON      5536 09-07-88  12:00a
	GDI      EXE    101770 09-07-88  12:00a
	HERCULES FON      9104 09-07-88  12:00a
	HIMEM    SYS      6261 09-07-88  12:00a
	HPMOUSE  DRV      4410 09-07-88  12:00a
	KBDBE    DRV      8782 09-07-88  12:00a
	KBDCA    DRV      9022 09-07-88  12:00a
	KBDDA    DRV      8490 09-07-88  12:00a
	KBDES    DRV      9460 09-07-88  12:00a
	KBDFR    DRV      8698 09-07-88  12:00a
	KBDFS    DRV      8522 09-07-88  12:00a
	KBDGR    DRV      8682 09-07-88  12:00a
	KBDIT    DRV      8322 09-07-88  12:00a
	KBDNE    DRV      8522 09-07-88  12:00a
	KBDSF    DRV      8778 09-07-88  12:00a
	KBDSG    DRV      8754 09-07-88  12:00a
	KBDSP    DRV      8848 09-07-88  12:00a
	KBDUK    DRV      8264 09-07-88  12:00a
	KBDUS    DRV      8088 09-07-88  12:00a
	KERNEL   EXE     58816 09-07-88  12:00a
	LMOUSE   DRV      3298 09-07-88  12:00a
	MOUSE    DRV      3667 09-07-88  12:00a
	MSDOS    EXE     46224 09-07-88  12:00a
	MSDOSD   EXE      6586 09-07-88  12:00a
	MSMOUSE1 DRV      2014 09-07-88  12:00a
	MSMOUSE2 DRV      2014 09-07-88  12:00a
	NOMOUSE  DRV      1245 09-07-88  12:00a
	SETUP    EXE     68779 09-07-88  12:00a
	SETUP    INF     20144 09-07-88  12:00a
	SOUND    DRV      5309 09-07-88  12:00a
	SYSTEM   DRV      2945 09-07-88  12:00a
	USERF    EXE    154512 09-07-88  12:00a
	WIN      CNF      2448 09-07-88  12:00a
	WIN      INI      3207 09-07-88  12:00a
	       48 file(s)     701938 bytes

	Total files listed:
	       48 file(s)     701938 bytes
	                      501760 bytes free

### Directory of Windows/386 2.10 (UTILS 1)

	 Volume in drive A is DISK2      

	Directory of A:\

	DESKJET  DRV     76096 09-07-88  12:00a
	EPSON24  DRV     50272 09-07-88  12:00a
	EPSON9   DRV     43776 09-07-88  12:00a
	FUJIMTRX DRV     48576 09-07-88  12:00a
	HERCULES 386    120634 09-07-88  12:00a
	HERCULES 3EX     37196 09-07-88  12:00a
	HERCULES DRV     28272 09-07-88  12:00a
	HERCULES GRB      4743 09-07-88  12:00a
	HERCULES LGO       557 09-07-88  12:00a
	HPPCL    DRV    212096 09-07-88  12:00a
	HPPLOT   DRV     62992 09-07-88  12:00a
	READMEE2 TXT      1083 09-07-88  12:00a
	READMEE9 TXT      1228 09-07-88  12:00a
	READMEFU TXT      1106 09-07-88  12:00a
	READMEHP TXT      4801 09-07-88  12:00a
	READMEPL TXT     15594 09-07-88  12:00a
	       16 file(s)     709022 bytes

	Total files listed:
	       16 file(s)     709022 bytes
	                      499712 bytes free

### Directory of Windows/386 2.10 (UTILS 2)

	 Volume in drive A is DISK3      

	Directory of A:\

	A4TRAY   TXT       944 09-07-88  12:00a
	CITOH    DRV     14208 09-07-88  12:00a
	IBMCOLOR DRV     14144 09-07-88  12:00a
	IBMGRX   DRV     14512 09-07-88  12:00a
	LBP8US   DRV     65664 09-07-88  12:00a
	MEMSET   EXE     36083 09-07-88  12:00a
	NECCOLOR DRV     28896 09-07-88  12:00a
	NECP2    DRV     14352 09-07-88  12:00a
	OKI24    DRV     45680 09-07-88  12:00a
	OLIPRINT DRV     37472 09-07-88  12:00a
	PAINTJET DRV     45536 09-07-88  12:00a
	PROPRINT DRV     35616 09-07-88  12:00a
	PROPRN24 DRV     34480 09-07-88  12:00a
	PSCRIPT  DRV    196288 09-07-88  12:00a
	QWIII    DRV     48480 09-07-88  12:00a
	RAMDRIVE SYS      8358 09-07-88  12:00a
	RAMDRIVE TXT      7198 09-07-88  12:00a
	READMENE TXT      1180 09-07-88  12:00a
	READMEO2 TXT      1002 09-07-88  12:00a
	READMEOL TXT      1989 09-07-88  12:00a
	READMEP2 TXT       955 09-07-88  12:00a
	READMEP9 TXT       978 09-07-88  12:00a
	READMEPJ TXT     14274 09-07-88  12:00a
	READMEPS TXT      8121 09-07-88  12:00a
	SETENHKB COM        14 09-07-88  12:00a
	SMARTDRV SYS     10224 09-07-88  12:00a
	THINKJET DRV     13296 09-07-88  12:00a
	TTY      DRV      6224 09-07-88  12:00a
	WIN386   PS2       138 09-07-88  12:00a
	       29 file(s)     706306 bytes

	Total files listed:
	       29 file(s)     706306 bytes
	                      500736 bytes free

### Directory of Windows/386 2.10 (DISPLAYS)

	 Volume in drive A is DISK4      

	Directory of A:\

	ATTDC    DRV     28736 09-07-88  12:00a
	CGA      386    122836 09-07-88  12:00a
	CGA      3EX     37148 09-07-88  12:00a
	CGA      DRV     24784 09-07-88  12:00a
	CGA      GRB      5614 09-07-88  12:00a
	CGA      LGO       468 09-07-88  12:00a
	COMPAQ   DRV     28144 09-07-88  12:00a
	CTVGA    386    141195 09-07-88  12:00a
	CTVGA    3EX     37500 09-07-88  12:00a
	EGA      386    140571 09-07-88  12:00a
	EGA      3EX     37404 09-07-88  12:00a
	EGA      GRB      7979 09-07-88  12:00a
	EGAHIRES DRV     33040 09-07-88  12:00a
	IDC      GRB      5715 09-07-88  12:00a
	KBDLA    DRV      8816 09-07-88  12:00a
	KBDNO    DRV      8506 09-07-88  12:00a
	KBDPO    DRV      8108 09-07-88  12:00a
	VGA      GRB      8605 09-07-88  12:00a
	VGA450   DRV     32736 09-07-88  12:00a
	       19 file(s)     717905 bytes

	Total files listed:
	       19 file(s)     717905 bytes
	                      492032 bytes free

### Directory of Windows/386 2.10 (FONTS)

	 Volume in drive A is DISK5      

	Directory of A:\

	COURA    FON     14144 07-01-88  12:00a
	COURB    FON     19088 07-01-88  12:00a
	COURC    FON     13040 07-01-88  12:00a
	COURD    FON     21328 07-01-88  12:00a
	COURE    FON     23808 07-01-88  12:00a
	DM600    DRV     32224 07-01-88  12:00a
	HELVA    FON     36768 07-01-88  12:00a
	HELVB    FON     50880 07-01-88  12:00a
	HELVC    FON     38960 07-01-88  12:00a
	HELVD    FON     58144 07-01-88  12:00a
	HELVE    FON     64784 07-01-88  12:00a
	MODERN   FON      7584 07-01-88  12:00a
	NEWFON   EXE     33231 07-01-88  12:00a
	ROMAN    FON     11120 07-01-88  12:00a
	SCRIPT   FON     10304 07-01-88  12:00a
	TMSRA    FON     35392 07-01-88  12:00a
	TMSRB    FON     45936 07-01-88  12:00a
	TMSRC    FON     37824 07-01-88  12:00a
	TMSRD    FON     57184 07-01-88  12:00a
	TMSRE    FON     58304 07-01-88  12:00a
	TOSH     DRV     14480 07-01-88  12:00a
	XER4020  DRV     22032 07-01-88  12:00a
	       22 file(s)     706559 bytes

	Total files listed:
	       22 file(s)     706559 bytes
	                      502272 bytes free

### Directory of Windows/386 2.10 (APPS)

	 Volume in drive A is DISK6      

	Directory of A:\

	ABC      TXT        42 07-01-88  12:00a
	AT&TREAD TXT      3428 07-01-88  12:00a
	CALC     EXE     28000 07-01-88  12:00a
	CALENDAR EXE     38896 07-01-88  12:00a
	CARDFILE EXE     39264 07-01-88  12:00a
	CLIPBRD  EXE     10800 07-01-88  12:00a
	CLOCK    EXE      8960 07-01-88  12:00a
	COMMANDE PIF       369 07-01-88  12:00a
	COMMANDF PIF       369 07-01-88  12:00a
	COMMANDW PIF       369 07-01-88  12:00a
	CONTROL  EXE     58064 07-01-88  12:00a
	CVTPAINT EXE      5712 07-01-88  12:00a
	DOTHIS   TXT       493 07-01-88  12:00a
	NOTEPAD  EXE     19072 07-01-88  12:00a
	PAINT    EXE     93280 07-01-88  12:00a
	PIF          <DIR>     07-21-03  10:32a
	PIFEDIT  EXE     26480 07-01-88  12:00a
	PRACTICE WRI      2944 07-01-88  12:00a
	README   TXT     13959 07-01-88  12:00a
	REVERSI  EXE     15552 07-01-88  12:00a
	SPOOLER  EXE     14336 07-01-88  12:00a
	TERMINAL EXE     48640 07-01-88  12:00a
	TI850    DRV     12816 07-01-88  12:00a
	WINOLDAP MOD     31216 07-01-88  12:00a
	WRITE    EXE    198368 07-01-88  12:00a
	       25 file(s)     671429 bytes

	Directory of A:\PIF

	.            <DIR>     07-21-03  10:32a
	..           <DIR>     07-21-03  10:32a
	123      PIF       369 07-01-88  12:00a
	ACCESS   PIF       369 07-01-88  12:00a
	BASIC    PIF       369 07-01-88  12:00a
	BASICA   PIF       369 07-01-88  12:00a
	BOOKS    PIF       369 07-01-88  12:00a
	CHART    PIF       369 07-01-88  12:00a
	CLOUT    PIF       369 07-01-88  12:00a
	DBASE    PIF       369 07-01-88  12:00a
	DW3PG    PIF       369 07-01-88  12:00a
	EDITOR   PIF       369 07-01-88  12:00a
	FILE     PIF       369 07-01-88  12:00a
	FL       PIF       369 07-01-88  12:00a
	FW       PIF       369 07-01-88  12:00a
	GRAPH    PIF       369 07-01-88  12:00a
	HTPM     PIF       369 07-01-88  12:00a
	LOTUS    PIF       369 07-01-88  12:00a
	MP       PIF       369 07-01-88  12:00a
	PE2      PIF       369 07-01-88  12:00a
	PFSACCES PIF       369 07-01-88  12:00a
	PLAN     PIF       369 07-01-88  12:00a
	PROJ     PIF       369 07-01-88  12:00a
	QB       PIF       369 07-01-88  12:00a
	RB5000   PIF       369 07-01-88  12:00a
	RBASE    PIF       369 07-01-88  12:00a
	READY    PIF       369 07-01-88  12:00a
	REPORT   PIF       369 07-01-88  12:00a
	SC4      PIF       369 07-01-88  12:00a
	SCOM     PIF       369 07-01-88  12:00a
	SK       PIF       369 07-01-88  12:00a
	SPELL    PIF       369 07-01-88  12:00a
	SYMPHONY PIF       369 07-01-88  12:00a
	TURBO    PIF       369 07-01-88  12:00a
	VW3      PIF       369 07-01-88  12:00a
	WORD     PIF       369 07-01-88  12:00a
	WORKS    PIF       369 07-01-88  12:00a
	WRDPERF  PIF       369 07-01-88  12:00a
	WRITE    PIF       369 07-01-88  12:00a
	WS2      PIF       369 07-01-88  12:00a
	XTALK    PIF       369 07-01-88  12:00a
	       41 file(s)      14391 bytes

	Total files listed:
	       66 file(s)     685820 bytes
	                      515584 bytes free
